# cmakesqueloton

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: main.cpp
